# node-flora

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config  index.js  package.json
script/: .npmrc.enc  build  clean  install  node-headers  test
src/: cli-native.cc  cli-native.h  common.h  flora-native.cpp  flora-reply.h  flora-wrap.h  napi-wrap.h
test/: flora-type.test.js  flora.test.js  unref.test.js
